--- a/NuageAlarms/app/build.gradle
+++ b/NuageAlarms/app/build.gradle
@@ -25,6 +25,10 @@ android {
 }
 
 dependencies {
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.9.8'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.8'
+
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'org.apache.geronimo.specs:geronimo-jms_1.1_spec:1.1.1'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
