--- a/NuageAlarms/app/build.gradle
+++ b/NuageAlarms/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    implementation 'net.sourceforge.streamsupport:streamsupport-cfuture:1.7.0'
 }
