--- a/NuageAlarms/app/build.gradle
+++ b/NuageAlarms/app/build.gradle
@@ -25,11 +25,14 @@ android {
 }
 
 dependencies {
+
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.9.8'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.8'
     implementation 'com.android.volley:volley:1.1.1'
-    implementation 'org.apache.geronimo.specs:geronimo-jms_1.1_spec:1.1.1'
+    implementation group: 'org.apache.activemq', name: 'activemq-client', version: '5.14.3'
+    implementation 'net.sourceforge.streamsupport:streamsupport-cfuture:1.7.0'
+
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -40,5 +43,4 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'net.sourceforge.streamsupport:streamsupport-cfuture:1.7.0'
 }
