--- a/NuageAlarms/app/src/main/AndroidManifest.xml
+++ b/NuageAlarms/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+            android:name=".NuageAlarmsApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -21,6 +22,7 @@
         <activity android:name=".LoginActivity"/>
         <activity android:name=".HomeActivity"/>
         <activity android:name=".AlarmFiltersActivity"/>
+        <activity android:name=".NotificationFiltersActivity"/>
     </application>
 
 </manifest>
