--- a/NuageAlarms/app/src/main/AndroidManifest.xml
+++ b/NuageAlarms/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".LoginActivity"/>
-        <activity android:name=".HomeActivity"/>
+        <activity android:name=".SettingsActivity"/>
+        <activity android:name=".DescriptionActivity"/>
         <activity android:name=".AlarmFiltersActivity"/>
         <activity android:name=".NotificationFiltersActivity"/>
     </application>
