--- a/NuageAlarms/app/build.gradle
+++ b/NuageAlarms/app/build.gradle
@@ -25,15 +25,15 @@ android {
 }
 
 dependencies {
-
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.9.8'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.8'
     implementation 'com.android.volley:volley:1.1.1'
-    //implementation group: 'org.apache.activemq', name: 'activemq-client', version: '5.14.3'
-    //implementation group: 'org.jboss.javaee', name: 'jboss-jms-api', version: '1.1.0.GA'
-    implementation 'net.sourceforge.streamsupport:streamsupport-cfuture:1.7.0'
 
+    implementation 'com.rabbitmq:amqp-client:4.11.0'
+    implementation 'org.slf4j:slf4j-android:1.7.26'
+
+    implementation 'net.sourceforge.streamsupport:streamsupport-cfuture:1.7.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
