Added a foreground service for alarm listening using RabbitMQ (at this point in time simulated with mocks)

--- a/NuageAlarms/app/src/main/AndroidManifest.xml
+++ b/NuageAlarms/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".DescriptionActivity"/>
         <activity android:name=".AlarmFiltersActivity"/>
         <activity android:name=".NotificationFiltersActivity"/>
+        <service android:name=".AlarmListenerService"/>
     </application>
 
 </manifest>
