--- a/NuageAlarms/app/build.gradle
+++ b/NuageAlarms/app/build.gradle
@@ -25,9 +25,11 @@ android {
 }
 
 dependencies {
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.9.8'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.8'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.9.6'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.6'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.6'
+
     implementation 'com.android.volley:volley:1.1.1'
 
     implementation 'com.rabbitmq:amqp-client:4.11.0'
