--- a/NuageAppServer/build.gradle
+++ b/NuageAppServer/build.gradle
@@ -11,6 +11,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.31'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation 'com.google.firebase:firebase-admin:6.8.1'
     implementation 'org.apache.activemq:activemq-client:5.14.3'
